# ex01-bd2

./: main.py  pyproject.toml
src/: graphic.py  sensor.py  thread.py
